k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
  namespace: voting-app
spec:
  #type: NodePort
  #type: ClusterIP
  type: LoadBalancer
  ports:
  - name: "vote-service"
    #port: 8080
    port: 80
    targetPort: 80
    #nodePort: 31000
  selector:
    app: vote
