k8s-specifications/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: voting-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/group.name: voting-app
    alb.ingress.kubernetes.io/healthcheck-path: /

    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:xxxxxxxx:certificate/xxxxxxxx
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
    #alb.ingress.kubernetes.io/group.name: voting-app
    #alb.ingress.kubernetes.io/load-balancer-name: voting-alb

spec:
  ingressClassName: alb

  rules:
  - host: vote.ehmutyam.xyz          #vote.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 8080

  - host: result.ehmutyam.xyz        #result.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 8081
